linkagem das tags ancoras no header e no footer do html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <header>
+  <header id="initial">
     <div class="container header-container">
       <div class="logo">
         <div class="logo-icon"> <img src="images/72ppi/icon-logo.png"> </div>
@@ -509,10 +509,10 @@
       <div class="footer-col">
         <h4>Links Rápidos</h4>
         <ul>
-          <li><a href="#">Início</a></li>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Sobre nós</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="#initial">Início</a></li>
+          <li><a href="#Products">Produtos</a></li>
+          <li><a href="#About">Sobre nós</a></li>
+          <li><a href="#Contact">Contato</a></li>
           <li><a href="#">Política de Privacidade</a></li>
         </ul>
       </div>
