--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="separator"></div>
             <h3>Prancheta Tilibra A4 Decorada Zip com Prendedor Metálico</h3>
-            <p class="product-description">Conjunto com 24 cores vibrantes</p>
+            <p class="product-description">Prancheta Simples</p>
             <div class="product-price">R$ 15,90</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -136,7 +136,7 @@
             </div>
             <div class="separator"></div>
             <h3>Prancheta em Duratex c/Prendedor Zincado- para papel A4</h3>
-            <p class="product-description">10 matérias, capa dura</p>
+            <p class="product-description">Prancheta Simples</p>
             <div class="product-price">R$ 8,33</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -152,7 +152,7 @@
             </div>
             <div class="separator"></div>
             <h3>Prancheta Color Lilás STALO</h3>
-            <p class="product-description">12 cores + pincel</p>
+            <p class="product-description">Prancheta Simples</p>
             <div class="product-price">R$ 11,90</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -171,7 +171,7 @@
               Papel Sulfite A4 75g, Chamex, Caixa com 10 Pacotes x 500 Folhas
               cada
             </h3>
-            <p class="product-description">240 funções</p>
+            <p class="product-description">Caixa com pacotes de folhas A4</p>
             <div class="product-price">R$ 297,00</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -187,7 +187,7 @@
             </div>
             <div class="separator"></div>
             <h3>Chamequinho Papel A4, 75 g, 100 Folhas, Branco Sulfite</h3>
-            <p class="product-description">3 compartimentos</p>
+            <p class="product-description">Folha A4</p>
             <div class="product-price">R$ 7,30</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -206,7 +206,7 @@
               Papel A4 Color Usapel Azul 180G. - Pacote Com 50 Folhas,
               Filiperson, 25002, Multicolor
             </h3>
-            <p class="product-description">Conjunto com 12 cores</p>
+            <p class="product-description">Folha A4 Azul</p>
             <div class="product-price">R$ 25,17</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -225,7 +225,7 @@
               Lápis Preto Redondo Nº2HB, Faber-Castell, EcoLápis, PM/1210AZ12+2,
               14 Unidades
             </h3>
-            <p class="product-description">Autoadesivo, 5 cores</p>
+            <p class="product-description">Lápis Simples</p>
             <div class="product-price">R$ 11,60</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -244,7 +244,7 @@
               Lápis Preto BIC Evolution, Grafite Nº 2HB, Com Corpo Verde
               Redondo, 4 Unidades, 835319
             </h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Lápis Simples</p>
             <div class="product-price">R$ 7,30</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -260,7 +260,7 @@
             </div>
             <div class="separator"></div>
             <h3>Lápis Grafite Redondo HB N.2 Plastic, Caixa com 12 unidades</h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Lápis Simples</p>
             <div class="product-price">R$ 7,60</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -276,7 +276,7 @@
             </div>
             <div class="separator"></div>
             <h3>Jocar Cola Liquida Branca 90 Grs, 4371</h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Cola Simples</p>
             <div class="product-price">R$ 3,90</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -295,7 +295,7 @@
               Canetinha Hidrográfica BIC Evolution, c/ 12 Cores, Ultra Lavável,
               Ponta Resistente, 940599, 1 Unidade
             </h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Canetinhas Coloridas</p>
             <div class="product-price">R$ 15,60</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -314,7 +314,7 @@
               Caneta Bic Azul Cristal Dura Mais – Ponta Esferográfica Média de
               1.0mm. Escrita Macia e Cor Intensa
             </h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Caixa com Canetas Azuis</p>
             <div class="product-price">R$ 41,00</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -330,7 +330,7 @@
             </div>
             <div class="separator"></div>
             <h3>Caneta, Crown, Esferográfica, Hawai, Dourada</h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Caneta Simples</p>
             <div class="product-price">R$ 26,35</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -350,7 +350,7 @@
               1.0mm. Escrita Macia e Cor Intensa – Leve 4 Pague 3 – Pacote 4
               Canetas
             </h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Caneta Simples</p>
             <div class="product-price">R$ 6,80</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -369,7 +369,7 @@
               Caderno Van Gogh "Noite Estrelada" Capa Dura e Toque Aveludado,
               125 Folhas, 21x15cm
             </h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Caderno com Desenho</p>
             <div class="product-price">R$ 79,00</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -388,7 +388,7 @@
               Tilibra - Caderno Capa PP Colegial S Def, Cambridge, Multicor, 80
               Folhas
             </h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Caderno Simples Preto</p>
             <div class="product-price">R$ 31,90</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -404,7 +404,7 @@
             </div>
             <div class="separator"></div>
             <h3>Confetti - Caderno com divisórias, 8023 HPP, Capa Preto</h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Caderno Simples Preto</p>
             <div class="product-price">R$ 30,80</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -420,7 +420,7 @@
             </div>
             <div class="separator"></div>
             <h3>Borracha Escolar, CIS, 47.7402, Verde, pacote de 2</h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Borracha Simples Verde</p>
             <div class="product-price">R$ 7,99</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -439,7 +439,7 @@
               Borracha Branca Plástica com Capa Protetora, Tris, School, 2
               Unidades, Cores Sortidas
             </h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Borracha Simples Branca</p>
             <div class="product-price">R$ 3,75</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
@@ -455,7 +455,7 @@
             </div>
             <div class="separator"></div>
             <h3>Borracha Escolar Plast CIS, Branca, Blister com 2 unidades</h3>
-            <p class="product-description">A4 com prendedor</p>
+            <p class="product-description">Borracha Simples Branca</p>
             <div class="product-price">R$ 7,42</div>
             <button class="button primary-button add-to-cart">Adicionar</button>
           </div>
