fix ajust reponsive mobile

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             um só lugar.
           </p>
           <div class="hero-buttons">
-            <a href="#" class="button primary-button">Ver produtos</a>
+            <a href="#Products" class="button primary-button">Ver produtos</a>
             <a href="#" class="button secondary-button">Fale conosco</a>
           </div>
         </div>
